@@ -52,6 +52,8 @@ V 2.3.0beta (7/24/24)
   Added support for Windows (llvm, msvc), Linux (llvm, gcc) and MacOS (llvm, gcc).
 * cmake support for both ducc0 and fftw
 * cmake adding nvcc and msvc optimization flags
+* cmake supports sphinx
+* updated install docs
 
 V 2.2.0 (12/12/23)
 
